--- a/index.html
+++ b/index.html
@@ -59,16 +59,24 @@
             </td>
             <td width="75%" valign="middle">
               <a href="https://drive.google.com/file/d/1EZTOO5xezLYcyIFgAzs4KuZFLbTcwTDH/view?usp=sharing">
-                <papertitle>High-Frequency Shape and Albedo from Shading using Natural Image Statistics</papertitle>
+                <papertitle>Meta-DMoE: Adapting to Domain Shift by Meta-Distillation from Mixture-of-Experts</papertitle>
               </a>
               <br>
-              <strong>Jonathan T. Barron</strong>, <a href="http://www.cs.berkeley.edu/~malik/">Jitendra Malik</a>
+              Tao Zhong*, Zhixiang Chi*, <strong>Li Gu*</strong>, Yang Wang, Yuanhao Yu, Jin Tang
               <br>
-              <em>CVPR</em>, 2011
+              <em>NeurIPS</em>, 2022.
               <br>
-              <a href="data/BarronMalikCVPR2011.bib">bibtex</a>
-              <p>This paper is subsumed by <a href="#SIRFS">SIRFS</a>.</p>
-            </td>
+	      
+	      <a href="https://arxiv.org/abs/2210.03885">Paper</a>
+              <a href="https://arxiv.org/abs/2209.14988">Slides</a>
+              <a href="https://dreamfusion3d.github.io/gallery.html">Code</a>
+              <p></p>
+
+              <p>
+	      Propose a new framework for unsupervised test-time adaption towards domain shift; Formulate the adaptation process as knowledge distillation and meta-learn the scheme of knowledge aggregation from multiple source domains. 
+	      </p>
+            
+	    </td>
           </tr>
 		
 		
