--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <a href="https://scholar.google.ca/citations?user=crdHC0sAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
 <!--                 <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp/&nbsp -->
                 <a href="https://github.com/Guliisgreat">Github</a>
+		<a href="https://www.linkedin.com/in/li-gu/">Linkedin</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
