--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					
 	    <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/meta_dmoe.png" alt="safs_small" width="160" height="160" style="border-style: none">
+              <img src="images/meta_dmoe.png" alt="meta_dmoe" width="1780" height="619" style="border-style: none">
             </td>
             <td width="75%" valign="middle">
               
