--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <p>Hi! I am a research engineer at Noah’s Ark Lab, Huawei Canada in Toronto</a>, where I work on computer vision and machine learning. I am currently working on xxx, supervised by <a href="https://users.encs.concordia.ca/~wayang/">Prof. Wang Yang</a>.
               </p>
               <p>
-                I obtained my Master's degree at Computer Engineering at University of Toronto in 2018.
+                I obtained my Master's degree in Computer Engineering at University of Toronto in 2018.
               </p>
               <p style="text-align:center">
                 <a href="mailto:guliisworking@hotmail.com">Email</a> &nbsp/&nbsp
@@ -31,7 +31,7 @@
 <!--                 <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
                 <a href="https://scholar.google.ca/citations?user=crdHC0sAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
 <!--                 <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp/&nbsp -->
-                <a href="https://github.com/Guliisgreat">Github</a> &nbsp/&nbsp -->
+                <a href="https://github.com/Guliisgreat">Github</a> &nbsp/&nbsp 
 		<a href="https://www.linkedin.com/in/li-gu/">Linkedin</a>
               </p>
             </td>
