--- a/index.html
+++ b/index.html
@@ -114,11 +114,7 @@
                   <br>
                   <strong>Li Gu</strong>, Zhixiang Chi*, Huan Liu*, Yuanhao Yu, Yang Wang
                   <br>
-                  <em>CVPR</em> 2022 VisWiz workshop.
-                  <br>
-                  Winning team at <a href="https://eval.ai/web/challenges/challenge-page/1438/overview">ORBIT few-shot object recognition challenge</a><h1 style="color:Tomato;">Award cash prizes of 2,500 USD</h1>
-                  <br>
-                  
+                  <em>CVPR</em> 2022 VisWiz workshop.                  
 
                   <a href="https://arxiv.org/abs/2210.00174">Paper</a> /
                   <a href="/data/orbit_2022.pdf">Slides</a> /
@@ -126,9 +122,34 @@
                   <p></p>
 
                   <p>
-                    Propose a new framework for unsupervised test-time adaption towards domain shift; Formulate the
-                    adaptation process as knowledge distillation and meta-learn the scheme of knowledge aggregation from
-                    multiple source domains.
+                    Winning team at <a href="https://eval.ai/web/challenges/challenge-page/1438/overview">ORBIT few-shot object recognition challenge</a>; Award cash prizes of 2,500 USD.
+                  </p>
+
+                </td>
+              </tr>
+
+
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src="images/meta_fscil.png" alt="meta_fscil" width="250" height="250" style="border-style: none">
+                </td>
+                <td width="75%" valign="middle">
+
+                  <papertitle>MetaFSCIL: A Meta-Learning Approach for Few-Shot Class Incremental Learning
+                  </papertitle>
+
+                  <br>
+                  Zhixiang Chi, <strong>Li Gu</strong>, Huan Liu, Yang Wang, Yuanhao Yu, Jin Tang
+                  <br>
+                  <em>CVPR</em>, 2022.
+                  <br>
+
+                  <a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Chi_MetaFSCIL_A_Meta-Learning_Approach_for_Few-Shot_Class_Incremental_Learning_CVPR_2022_paper.pdf">Paper</a> /
+                  <a href="/data/MetaFSCIL_cvpr2022_talk.pdf">Talk</a> 
+                  <p></p>
+
+                  <p>
+                    Proposed a bi-level optimization based on meta-learning to directly optimize the network to learn how to incrementally learn in the setting of Few-Shot Class Incremental Learning(FSCIL).
                   </p>
 
                 </td>
