--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                   <p></p>
 
                   <p>
-                    Propose a new framework for unsupervised test-time adaption towards domain shift; Formulate the
-                    adaptation process as knowledge distillation and meta-learn the scheme of knowledge aggregation from
+                    Proposed a new framework for unsupervised test-time adaption towards domain shift; Formulated the
+                    adaptation process as knowledge distillation and meta-learned the scheme of knowledge aggregation from
                     multiple source domains.
                   </p>
 
@@ -121,8 +121,8 @@
                   <a href="https://github.com/Guliisgreat/ORBIT-2022-winner-method">Code</a>
                   <p></p>
 
-                  <p>
-                    Winning team at <a href="https://eval.ai/web/challenges/challenge-page/1438/overview">ORBIT few-shot object recognition challenge</a>; Award cash prizes of 2,500 USD.
+                  <p>Extended ProtoNet-based few shot image classification approaches into the video domain.
+                    Winning team at <a href="https://eval.ai/web/challenges/challenge-page/1438/overview">ORBIT few-shot object recognition challenge</a>; Awarded cash prizes of 2,500 USD.
                   </p>
 
                 </td>
@@ -131,7 +131,7 @@
 
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
-                  <img src="images/meta_fscil.png" alt="meta_fscil" width="250" height="250" style="border-style: none">
+                  <img src="images/meta_fscil.png" alt="meta_fscil" width="350" height="250" style="border-style: none">
                 </td>
                 <td width="75%" valign="middle">
 
@@ -150,6 +150,92 @@
 
                   <p>
                     Proposed a bi-level optimization based on meta-learning to directly optimize the network to learn how to incrementally learn in the setting of Few-Shot Class Incremental Learning(FSCIL).
+                  </p>
+
+                </td>
+              </tr>
+
+
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src="images/data-free-replay.png" alt="free-replay" width="350" height="150" style="border-style: none">
+                </td>
+                <td width="75%" valign="middle">
+
+                  <papertitle>Few-Shot Class-Incremental Learning via Entropy-Regularized Data-Free Replay
+                  </papertitle>
+
+                  <br>
+                  Huan Liu, <strong>Li Gu</strong>, Zhixiang Chi, Yang Wang, Yuanhao Yu, Jun Chen, Jin Tang
+                  <br>
+                  <em>ECCV</em>, 2022.
+                  <br>
+
+                  <a href="https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136840144.pdf">Paper</a> /
+                  <!-- <a href="/data/MetaFSCIL_cvpr2022_talk.pdf">Talk</a>  -->
+                  <p></p>
+
+                  <p>
+                    Proposed a replay-based Few-Shot Class Incremental Learning(FSCIL) framework that can synthesize data by a generator without storing real data during each continual learning session. 
+                    Imposed entropy regularization in the generator training to encourage more uncertain examples to be utilized in knowledge distillation. 
+                  </p>
+
+                </td>
+              </tr>
+
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src="images/dmm-net.png" alt="dmm-net" width="350" height="250" style="border-style: none">
+                </td>
+                <td width="75%" valign="middle">
+
+                  <papertitle>DMM-Net: Differentiable Mask-Matching Network for Video Object Segmentation
+                  </papertitle>
+
+                  <br>
+                  Xiaohui Zeng*, Renjie Liao*, <strong>Li Gu</strong>, Yuwen Xiong, Sanja Fidler, Raquel Urtasun
+                  <br>
+                  <em>ICCV</em>, 2019.
+                  <br>
+
+                  <a href="https://arxiv.org/abs/1909.12471">Paper</a> /
+                  <a href="https://github.com/ZENGXH/DMM_Net">Code</a> 
+                  <p></p>
+
+                  <p>
+                    Proposed the differentiable mask-matching network (DMM-Net) for solving the video object segmentation problem where the initial object masks are provided..
+                  </p>
+
+                </td>
+              </tr>
+
+              
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src="images/APD-BNN.png" alt="APD-BNN" width="350" height="250" style="border-style: none">
+                </td>
+                <td width="75%" valign="middle">
+
+                  <papertitle>Adversarial Distillation of Bayesian Neural Network Posteriors
+                  </papertitle>
+
+                  <br>
+                  Xiaohui Zeng*, Renjie Liao*, <strong>Li Gu</strong>, Yuwen Xiong, Sanja Fidler, Raquel Urtasun
+                  <br>
+                  <em>ICML</em>, 2018.
+                  <br>
+
+                  <a href="https://arxiv.org/abs/1806.10317?context=cs">Paper</a> /
+                  <a href="https://github.com/wangkua1/apd_public">Code</a> /
+                  <a href="https://www.paulvicol.com/pdfs/AdversarialPosteriorDistillation_Slides.pdf">Slides</a> /
+                  <a href="https://www.paulvicol.com/pdfs/ICML_2018_APD_Poster.pdf">Poster</a> 
+
+                  <p></p>
+
+                  <p>
+                    Proposed an efficient framework for using a small Generative Adversarial
+                    Network (GAN) to store MCMC samples of the posterior from a large Bayesian Neural Network.
+                    
                   </p>
 
                 </td>
