--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
-                  <img src="images/meta_dmoe.png" alt="meta_dmoe" width="300" height="150" style="border-style: none">
+                  <img src="images/meta_dmoe.png" alt="meta_dmoe" width="350" height="150" style="border-style: none">
                 </td>
                 <td width="75%" valign="middle">
 
@@ -104,7 +104,7 @@
               
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
-                  <img src="images/orbit_2022.png" alt="orbit_2022" width="300" height="150" style="border-style: none">
+                  <img src="images/orbit_2022.png" alt="orbit_2022" width="350" height="150" style="border-style: none">
                 </td>
                 <td width="75%" valign="middle">
 
@@ -117,7 +117,7 @@
                   <em>CVPR</em> 2022 VisWiz workshop.                  
 
                   <a href="https://arxiv.org/abs/2210.00174">Paper</a> /
-                  <a href="/data/orbit_2022.pdf">Slides</a> /
+                  <a href="data/orbit_2022.pdf">Slides</a> /
                   <a href="https://github.com/Guliisgreat/ORBIT-2022-winner-method">Code</a>
                   <p></p>
 
@@ -131,7 +131,7 @@
 
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
-                  <img src="images/meta_fscil.png" alt="meta_fscil" width="350" height="250" style="border-style: none">
+                  <img src="images/meta_fscil.png" alt="meta_fscil" width="350" height="200" style="border-style: none">
                 </td>
                 <td width="75%" valign="middle">
 
@@ -185,7 +185,7 @@
 
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
-                  <img src="images/dmm-net.png" alt="dmm-net" width="350" height="250" style="border-style: none">
+                  <img src="images/dmm-net.png" alt="dmm-net" width="350" height="200" style="border-style: none">
                 </td>
                 <td width="75%" valign="middle">
 
