--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
                   <p style="text-align:center">
                     <name>Li Gu</name>
                   </p>
-                  <p>Hi! I am a research engineer at Noah’s Ark Lab, Huawei Canada in Toronto</a>, where I work on
-                    computer vision and machine learning. I am currently working on xxx, supervised by <a
-                      href="https://users.encs.concordia.ca/~wayang/">Prof. Wang Yang</a>.
+                  <p>I am a research engineer at Noah’s Ark Lab, Huawei Canada in Toronto, supervised by <a>href="https://users.encs.concordia.ca/~wayang/">Prof. Wang Yang</a>. 
+                    I obtained M. Eng in Computer Engineering from University of Toronto and B. Eng in Electrical & Computer Engineering from Shanghai Jiao Tong University. 
+                    My research interests are at the intersection of computer vision and machine learning. 
+                    Recently, I've been focusing on how to enable machine learning models to adapt to novel environments rapidly and efficiently, including areas in meta-learning, few-shot learning, continual learning, and prompt learning.
+                    
                   </p>
-                  <p>
-                    I obtained my Master's degree in Computer Engineering at University of Toronto in 2018.
-                  </p>
+                  <!-- <p>
+                    I obtained Master's degree in Computer Engineering from University of Toronto and B. Eng in Electrical & Computer Engineering from Shanghai Jiao Tong University. 
+                  </p> -->
                   <p style="text-align:center">
                     <a href="mailto:guliisworking@hotmail.com">Email</a> &nbsp/&nbsp
                     <!--                 <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp -->
@@ -58,9 +60,9 @@
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
                   <heading>Publication</heading>
-                  <p>
+                  <!-- <p>
                     My primary research interests lie at the intersection of machine learning and computer vision.
-                  </p>
+                  </p> -->
                 </td>
               </tr>
             </tbody>
@@ -92,7 +94,7 @@
                   <p></p>
 
                   <p>
-                    Proposed a new framework for unsupervised test-time adaption towards domain shift; Formulated the
+                    Proposed a new framework for unsupervised test-time adaption toward domain shift; Formulated the
                     adaptation process as knowledge distillation and meta-learned the scheme of knowledge aggregation from
                     multiple source domains.
                   </p>
@@ -114,15 +116,16 @@
                   <br>
                   <strong>Li Gu</strong>, Zhixiang Chi*, Huan Liu*, Yuanhao Yu, Yang Wang
                   <br>
-                  <em>CVPR</em> 2022 VisWiz workshop.                  
+                  <em>CVPR</em> 2022 VisWiz workshop.
+                  <br>                  
 
                   <a href="https://arxiv.org/abs/2210.00174">Paper</a> /
                   <a href="data/orbit_2022.pdf">Slides</a> /
                   <a href="https://github.com/Guliisgreat/ORBIT-2022-winner-method">Code</a>
                   <p></p>
 
-                  <p>Extended ProtoNet-based few shot image classification approaches into the video domain.
-                    Winning team at <a href="https://eval.ai/web/challenges/challenge-page/1438/overview">ORBIT few-shot object recognition challenge</a>; Awarded cash prizes of 2,500 USD.
+                  <p>Extended ProtoNet-based few-shot image classification approaches into the video domain.
+                    The winning team at the <a href="https://eval.ai/web/challenges/challenge-page/1438/overview">ORBIT few-shot object recognition challenge</a>; Awarded cash prizes of 2,500 USD.
                   </p>
 
                 </td>
@@ -149,7 +152,7 @@
                   <p></p>
 
                   <p>
-                    Proposed a bi-level optimization based on meta-learning to directly optimize the network to learn how to incrementally learn in the setting of Few-Shot Class Incremental Learning(FSCIL).
+                    Proposed  a bi-level optimization-based meta-learning approach to learning how to learn incrementally in the Few-Shot Class Incremental Learning(FSCIL) setting.
                   </p>
 
                 </td>
@@ -203,7 +206,7 @@
                   <p></p>
 
                   <p>
-                    Proposed the differentiable mask-matching network (DMM-Net) for solving the video object segmentation problem where the initial object masks are provided..
+                    Proposed the differentiable mask-matching network (DMM-Net) for solving the video object segmentation problem where the initial object masks are provided.
                   </p>
 
                 </td>
