--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
                   <p style="text-align:center">
                     <name>Li Gu</name>
                   </p>
-                  <p>I am a research engineer at Noah’s Ark Lab, Huawei Canada in Toronto, supervised by <a>href="https://users.encs.concordia.ca/~wayang/">Prof. Wang Yang</a>. 
+                  <p>I am a research engineer at Noah’s Ark Lab, Huawei Canada in Toronto, supervised by <a href="https://users.encs.concordia.ca/~wayang/">Prof. Wang Yang</a>. 
                     I obtained M. Eng in Computer Engineering from University of Toronto and B. Eng in Electrical & Computer Engineering from Shanghai Jiao Tong University. 
+                  <p>
+                  <p>
                     My research interests are at the intersection of computer vision and machine learning. 
-                    Recently, I've been focusing on how to enable machine learning models to adapt to novel environments rapidly and efficiently, including areas in meta-learning, few-shot learning, continual learning, and prompt learning.
-                    
+                    Recently, I've been focusing on how to enable machine learning models to adapt to novel environments rapidly and efficiently, including areas in meta-learning, few-shot learning, continual learning, and prompt learning.  
                   </p>
                   <!-- <p>
                     I obtained Master's degree in Computer Engineering from University of Toronto and B. Eng in Electrical & Computer Engineering from Shanghai Jiao Tong University. 
@@ -125,6 +126,7 @@
                   <p></p>
 
                   <p>Extended ProtoNet-based few-shot image classification approaches into the video domain.
+                    <br><br>
                     The winning team at the <a href="https://eval.ai/web/challenges/challenge-page/1438/overview">ORBIT few-shot object recognition challenge</a>; Awarded cash prizes of 2,500 USD.
                   </p>
 
