--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
                   <p>Extended ProtoNet-based few-shot image classification approaches into the video domain.
                     <br><br>
-                    The winning team at the <a href="https://eval.ai/web/challenges/challenge-page/1438/overview">ORBIT few-shot object recognition challenge</a>; Awarded cash prizes of 2,500 USD.
+                    <p style="color:red">The winning team</p> at the <a href="https://eval.ai/web/challenges/challenge-page/1438/overview">ORBIT few-shot object recognition challenge</a>; Awarded cash prizes of 2,500 USD.
                   </p>
 
                 </td>
@@ -150,7 +150,7 @@
                   <br>
 
                   <a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Chi_MetaFSCIL_A_Meta-Learning_Approach_for_Few-Shot_Class_Incremental_Learning_CVPR_2022_paper.pdf">Paper</a> /
-                  <a href="/data/MetaFSCIL_cvpr2022_talk.pdf">Talk</a> 
+                  <a href="data/MetaFSCIL_cvpr2022_talk.pdf">Talk</a> 
                   <p></p>
 
                   <p>
