--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
                   <p>Extended ProtoNet-based few-shot image classification approaches into the video domain.
                     <br><br>
-                    <p style="color:red">The winning team</p> at the <a href="https://eval.ai/web/challenges/challenge-page/1438/overview">ORBIT few-shot object recognition challenge</a>; Awarded cash prizes of 2,500 USD.
+                    <a style="color:red">The winning team</a> at the <a href="https://eval.ai/web/challenges/challenge-page/1438/overview">ORBIT few-shot object recognition challenge</a>; Awarded cash prizes of 2,500 USD.
                   </p>
 
                 </td>
